Fixes and updates:  - When the screen width below 991px the layout changes to mobile view. The search box is below the text, but too narrow.
 - Grey background hover in the dropdown list when the cursor is over

- Add a keyboard arrow down/up event to select an element from dropdown list

--- a/gba-thesaurus/css/site.css
+++ b/gba-thesaurus/css/site.css
@@ -89,6 +89,18 @@ ul {
     cursor: pointer;
 }
 
+    .searchLink:hover {
+        background-color: gray;
+        color: white;
+        cursor:pointer;
+    }
+    .searchLink.selected {
+        background-color: gray;
+        color: white;
+        cursor: pointer;
+    }
+
+
 .searchResultURI {
     font-size: small;
     color: #069;
